# halley

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  settings.gradle.kts  test.halley
gradle/: libs.versions.toml
halley-core/: Cargo.toml
halley-core/src/: lib.rs
halley-core/src/name_resolution/: mod.rs  resolve.rs  scope.rs
halley-lang/: Cargo.toml
halley-lang/src/ast/: id.rs  mod.rs
halley-lsp-client/: Cargo.toml  language-config.json  package-lock.json  package.json
halley-lsp-client/src/: extension.ts
halley-lsp-server/: Cargo.toml
halley-lsp-server/src/: main.rs
halley-parser/: Cargo.toml
halley-parser/src/: lib.rs
halley-parser/src/lexer/: mod.rs  token.rs  token_type.rs
halley-parser/src/parser/: mod.rs  operators.rs
halley-pbt-generator/: Cargo.toml
halley-pbt-generator/src/: main.rs
halley-pbt-generator/src/ast/: mod.rs
halley-test/: test.halley
kotlin/: build.gradle.kts
kotlin/gradle/: libs.versions.toml
kotlin/gradle/wrapper/: gradle-wrapper.properties
kotlin/src/main/antlr/com/sarajuhosova/halley/: Halley.g4
kotlin/src/test/resources/examples/: binop.hl  single_return.hl
src/: main.rs
src/main/antlr/com/sarajuhosova/halley/: Halley.g4
src/main/kotlin/com/sarajuhosova/halley/: Main.kt
src/main/kotlin/com/sarajuhosova/halley/interpreter/: Context.kt  Interpreter.kt
src/main/kotlin/com/sarajuhosova/halley/parser/: ASTBuilder.kt  Parser.kt
src/main/kotlin/com/sarajuhosova/halley/typechecker/: Operator.kt  TContext.kt  TypeChecker.kt
src/test/kotlin/com/sarajuhosova/halley/parser/: BinOpTest.kt  (+4 more)
(+59 files in other folders)
